@@ -217,11 +217,11 @@ extern MODFUNC char *sock_strerror(int);
 extern int dgets(int, char *, int);
 extern char *inetntoa(char *);
 
-#if !defined(HAVE_SNPRINTF) || !defined(HAVE_VSNPRINTF)
-/* #ifndef _WIN32 XXX why was this?? -- Syzop. */
+#ifndef HAVE_SNPRINTF
 extern int snprintf (char *str, size_t count, const char *fmt, ...);
+#endif
+#ifndef HAVE_VSNPRINTF
 extern int vsnprintf (char *str, size_t count, const char *fmt, va_list arg);
-/* #endif */
 #endif
 
 #ifdef _WIN32
