@@ -1137,3 +1137,7 @@
   VHP will stay supported though... so it's not mandatory to switch over.
 - Fixed set::maxdccallow setting to <=0 still allowing one entry to be set, reported by
   RSCruiser (#0002883).
+- Fixed Microsoft Visual Studio 2005 (8.x) unable to compile, and, after fixing that, causing
+  a lot of crashes. Both are now fixed. Reported by Zell, Yamake, and others (#2875, #2704).
+  Fix provided by Xuefer. This also gets rid of some annoying and useless compile warnings
+  as well.
